@@ -4,6 +4,8 @@
   * fixed handling a "used columns" in the RBR protocol
   * fixed possible crash if run under valgrind
   * fixed crash if --defaults-file doesn't exist (#59790)
+  * fixed stripping first characters of log-messages (#58941)
+  * fixed mem-leak if connection-pooling is used (#56620)
   * removed the "admin" plugin from the list of plugins loaded by default
 
 0.8.1 - 
